--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
         <section id="about-me">
             <div class="about-me-content">
                 <h1 class="main-title">About me</h1>
-                <img class="photo" src="foto.png" alt="Foto de Leonardo.">
+                <img class="photo" src="../assets/foto.png" alt="Foto de Leonardo.">
 
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
                     aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
